--- a/Visual Studio Projects/DirectXSamples/Tutorial07/Tutorial07_2010.vcxproj.filters
+++ b/Visual Studio Projects/DirectXSamples/Tutorial07/Tutorial07_2010.vcxproj.filters
@@ -110,5 +110,8 @@
     <FxCompile Include="Lambert.fx">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="GBuffer.fx">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
