impelementacion de pases

--- a/Visual Studio Projects/DirectXSamples/Tutorial07/Tutorial07_2010.vcxproj.filters
+++ b/Visual Studio Projects/DirectXSamples/Tutorial07/Tutorial07_2010.vcxproj.filters
@@ -113,5 +113,11 @@
     <FxCompile Include="GBuffer.fx">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="AmbientOc.fx">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Skybox.fx">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
