--- a/Visual Studio Projects/DirectXSamples/Tutorial07/Tutorial07_2010.vcxproj.filters
+++ b/Visual Studio Projects/DirectXSamples/Tutorial07/Tutorial07_2010.vcxproj.filters
@@ -137,5 +137,8 @@
     <FxCompile Include="FillBright.fx">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="TownMap.fx">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
