--- a/Visual Studio Projects/DirectXSamples/Tutorial07/imgui.ini
+++ b/Visual Studio Projects/DirectXSamples/Tutorial07/imgui.ini
@@ -49,7 +49,12 @@ Size=183,100
 Collapsed=0
 
 [Window][Pases]
-Pos=104,60
-Size=499,387
+Pos=35,75
+Size=264,259
 Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=70,11
+Size=638,680
+Collapsed=1
 
